--- a/src/renderer/assets/styles/global.scss
+++ b/src/renderer/assets/styles/global.scss
@@ -91,27 +91,7 @@ section {
     padding-bottom: 100px;
   }
 
-  &::-webkit-scrollbar {
-    width: 12px;
-    transition: 200ms;
-
-    &-thumb {
-        background-color: var(--scrollbar-thumb);
-        border-radius: 6px;
-        border-left: 2px solid transparent;
-        background-clip: padding-box;
-        cursor: pointer;
-
-        &:hover {
-          border: 0;
-        }
-
-    }
-
-    &-track {
-        background-color: var(--color-secondary);
-        }
-  }
+  @include scrollbar_styling;
 }
 
 nav + nav + .main {
