--- a/src/renderer/assets/styles/partials/mixin.scss
+++ b/src/renderer/assets/styles/partials/mixin.scss
@@ -35,6 +35,29 @@
   // outline-offset: -2px;
 }
 
+@mixin scrollbar_styling {
+  &::-webkit-scrollbar {
+    width: 12px;
+    transition: 200ms;
+
+    &-thumb {
+        background-color: var(--scrollbar-thumb);
+        border-radius: 6px;
+        border-left: 2px solid transparent;
+        background-clip: padding-box;
+        cursor: pointer;
+
+        &:hover {
+          border: 0;
+        }
+    }
+
+    &-track {
+        background-color: var(--color-secondary);
+      }
+  }
+}
+
 .___DEBUG___PARTIALS_MIXINS_CSS {
   display: none;
 }
